test/Fail/Polarity-pragma-in-safe-mode.agda
{-# OPTIONS --safe #-}

postulate F : Set → Set

{-# POLARITY F ++ #-}
