test/Fail/Polarity-pragma-in-safe-mode.err
Polarity-pragma-in-safe-mode.agda:5.1-22: error: [SafeFlagPolarity]
Cannot use POLARITY pragma with safe flag.
